# dms-coordinates

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: rust.yml
doc/: cardinal.md  dms.md  dms3d.md
examples/: example.rs
src/: angle.rs  bearing.rs  cardinal.rs  dms.rs  dms3d.rs  lib.rs
tests/: bearing.rs  cardinal.rs  dms.rs  dms1d.rs  dms3d.rs
