[package]
name = "dms-coordinates"
version = "1.1.0"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Package to handle D°M'S'' coordinates"
homepage = "https://github.com/gwbres/dms-coordinates"
keywords = ["positionning", ]
categories = ["science",]
edition = "2018"
readme = "README.md"

[dependencies]
map_3d = "0.1.4" 
rust-3d = "0.34.0"
thiserror = "1"
geo-types = "0.7.2"
gpx = "0.8.1"
serde = "1"
serde_derive = "1"
initial_conditions = "0.4.0"
num-integer = "0.1.45"
