[package]
name = "dms-coordinates"
version = "1.1.0"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Package to handle D°M'S'' coordinates"
homepage = "https://github.com/gwbres/dms-coordinates"
keywords = ["positionning", ]
categories = ["science",]
edition = "2018"
readme = "README.md"

[features]
with-gpx = ["gpx"]
with-serde = ["serde"]

[dependencies]
regex = "1"
map_3d = "0.1.4" 
rust-3d = "0.34.0"
thiserror = "1"
geo-types = "0.7.2"
num-integer = "0.1.45"
gpx = { version = "0.8.1", optional = true }
serde = { version = "1.0.138", optional = true, features = ["derive"] }

[dev-dependencies]
assert_float_eq = "1.1.3"
