[package]
name = "dms-coordinates"
version = "1.3.0"
license = "MIT OR Apache-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "Package to handle D°M'S'' coordinates"
homepage = "https://github.com/gwbres/dms-coordinates"
keywords = ["positionning", ]
categories = ["science",]
repository = "https://github.com/gwbres/dms-coordinates"
edition = "2018"
readme = "README.md"

[features]
default = []
std = ["serde", "serde_derive"]

[dependencies]
regex = "1"
map_3d = "0.1.4" 
rust-3d = "0.34.0"
thiserror = "1"
geo-types = "0.7.2"
num-integer = "0.1.45"
gpx = { version = "0.8.1", optional = true, default-features = false, dep = ["std"]}
serde = { version = "1.0.138", optional = true, default-features = false, features = ["derive"] }
serde_derive = { version = "1", optional = true }

[dev-dependencies]
assert_float_eq = "1.1.3"
